Fix bug when ImcClassDesc represent array